# AI-SecOps

./: .gitignore  AI_SECOPS.md  README.md  codeloc  features.json  progress.md
backend/: README.md  pyproject.toml
backend/src/: __init__.py
backend/src/api/: main.py
backend/src/api/routers/: assets.py  copilot.py  feedback.py  incidents.py  orchestration.py  topology.py
backend/src/api/websockets/: __init__.py  manager.py  routes.py
backend/src/core/: auth.py  database.py  llm_provider.py
backend/src/data_plane/: l
backend/src/data_plane/layer1_flood_gate/: __init__.py  flood_gate.py
backend/src/data_plane/layer2_normalizer/: __init.py  normalizer.py
backend/src/data_plane/layer3_graph/: __init__.py  neo4j_client.py
backend/src/data_plane/layer4_compression/: __init__.py  compressor.py
backend/src/data_plane/layer5_analyzer/: __init__.py  analyzer.py
backend/src/data_plane/layer6_orchestrator/: __init__.py  langflow_parser.py  orchestrator.py  registry.py
backend/src/data_plane/layer7_simulator/: __init__.py  simulator.py
backend/src/data_plane/layer8_executor/: __init__.py  executor.py
backend/src/data_plane/layer9_reporter/: __init__.py  reporter.py
backend/src/models/: __init__.py  alert.py  api_response.py  approval.py  asset.py  incident_state.py  storyline.py
backend/tests/layer6_orchestrator/: test_langgraph_hitl.py
docs/: AI-SecOps 项目开发 Harness Engineering 最佳实践指南.md  AI-SecOps项目Langflow SOAR 集成与 Harness Engineering 规格书.md  AI-SecOps项目前期调研材料.md  AI-SecOps项目开发 Harness Engineering 最佳实践指南.md  Harness Engineering最佳实践.md  前端设计文档.md  后端设计文档.md  基于Sigma规则的大规模告警过滤最佳实践指南.md  界面设计需求.md
docs/templates/: .env.example  README.md  docker-compose.dev.yml  mock-sangfor-logs.jsonl  mock-suricata-logs.jsonl  neo4j-seed.cypher
frontend/: SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: AlertPanel.tsx  AssetPanel.tsx  FeedbackPanel.tsx  HITLApprovalPanel.tsx  NotificationPanel.tsx  index.ts
frontend/src/pages/Settings/: PlaybookEditor.tsx
frontend/src/services/: api.ts  index.ts  websocket.ts
frontend/src/stores/: useAppStore.ts
scripts/: init.sh
